styles/styles.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.4.14,
* Autoprefixer: v10.4.7
* Browsers: last 4 version
*/

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/ptsans-400.woff2");
  font-display: swap;
}

@font-face {
  font-family: "PT Sans";
  font-style: normal;
  font-weight: 700;
  src: url("../fonts/ptsans-700.woff2");
  font-display: swap;
}

/* Pages */
html {
  box-sizing: border-box;
}

body {
  font-family: "PT Sans", "Arial", sans-serif;
  margin: 0;
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  font-style: normal;
  color: #333333;
  background-color: #f2f2f2;
}

.wrapper {
  width: 1200px;
  background-color: #ffffff;
  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
  margin: 0 auto;
}

.page-header {
  position: relative;
  background-color: rgb(255, 255, 255);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 64px;
}

.navigation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-top: 20px;
  padding-bottom: 20px;
}

.navigation-logo {
  position: absolute;
  left: 70px;
  top: 0;
}

.navigation-list {
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  margin-left: 238px;
  width: 339px;
}

.navigation-item {
  list-style-type: none;
}

.navigation-link {
  list-style-type: none;
  font-size: 20px;
  font-weight: 700;
  line-height: 24px;
  color: #000000;
  text-decoration: none;
  margin: 0 16px 0 16px;

}

.navigation-link:hover {
  opacity: 0.5;
  transition: 0.3s;
}

.navigation-link-active {
  border-bottom: solid 3px rgba(117, 98, 87, 1);
  pointer-events: none;
  padding-bottom: 20px;
}

.navigation-user {
  padding: 0;
  margin: 0;
  max-width: 300px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  margin-left: 313px;
  gap: 16px;
}

.navigation-user-item {
  position: relative;
  list-style-type: none;
}

.search-navigation-link {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url("../images/search.svg");
  background-position: center;
  background-repeat: no-repeat;
}

.likes-navigation-link {
  display: block;
  width: 20px;
  height: 20px;
  background-image: url("../images/likes.svg");
  background-position: center;
  background-repeat: no-repeat;
  margin-left: 8px;
  margin-right: 17px;
}

.likes-ammount {
  padding: 5px;
  background-color: #7db54f;
  color: #ffffff;
  border-radius: 50%;
  font-size: 10px;
  line-height: 10px;
  text-align: center;
  position: absolute;
  bottom: 15px;
  left: 20px;
}

.navigation-user .navigation-button {
  color: #ffffff;
  text-decoration: none;
  background-color: rgba(117, 97, 87, 1);
  text-transform: uppercase;
  text-align: center;
  border-radius: 4px;
  text-transform: uppercase;
  padding: 8px 34px;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  text-align: center;
  vertical-align: middle;
  text-transform: uppercase;
  cursor: pointer;
}

.navigation-button:hover {
  background-color: rgba(97, 80, 72, 1);
}
.navigation-button:focus {
  background-color: rgba(97, 80, 72, 1);
}
.navigation-button:active {
  background-color: rgba(117, 97, 87, 1);
  color: rgba(255, 255, 255, 0.3);
}

.navigation-logo {
  display: block;
  width: 140px;
  height: 70px;
}

.hero {
  background-image: url("../images/devider.svg"),
    url("../images/index-background.jpg");
  background-repeat: no-repeat;
  background-size: 100% auto, 1200px 485px;
  background-position: left bottom, left top;
  background-color: #cce3f1;
  padding: 51px 371px 82px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

.advantages-title-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px 274px 90px;
  text-align: center;
  background-color: #ffffff;
}

.service-title-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-wrap: wrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 64px 274px;
  text-align: center;
  background-color: #ffffff;
}
.advantages-title {
  margin: 0;
  padding: 0;
  font-size: 30px;
  line-height: 36px;
  text-align: center;
  text-transform: uppercase;
  color: #000000;
  margin-bottom: 25px;
}
.service-title {
  margin: 0;
  padding: 0;
  font-size: 30px;
  line-height: 36px;
  text-align: center;
  text-transform: uppercase;
  color: #000000;
  margin-bottom: 20px;
}

.advantages-text {
  margin: 0;
  padding: 0;
  font-size: 22px;
  line-height: 26px;
  text-align: center;
}

.advantages-item-wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  flex-wrap: wrap;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 102px 85px;
  text-align: center;
  color: #ffffff;
  background-color: #82b3d3;
  position: relative;
}

.advantages-item-small {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  flex-wrap: wrap;
  text-align: center;
  max-width: 230px;
  padding: 0 85px;
  height: 385px;
  justify-content: center;
  position: relative;
}
/* ... */

